css/main.scss
---
---

@import "fonts/font-cera.css";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --color-bg: #fff;
  --color-bg-hl: #fafafa;
  --color-text: #222;
  --color-hl-0: #edff00;
  --color-hl-1: #4c7f2a;
  --color-hl-2: #222324;
  --color-hl-3: #929293;
  --menu-height: 3rem;
  font-size: 15px;
}

@media (max-width: 768px) {
  :root {
    font-size: 13px;
  }
}

html, body {
  background-color: var(--color-bg);
  color: var(--color-text);
  font-family: "Cera";
}

// Single-page slider
body.slider-body {
  overflow: hidden;
}

.slider-page {
  display: flex;
  width: 700vw;
  will-change: transform;
}

.slider-page .panel {
  width: 100vw;
  height: calc(100vh - var(--menu-height));
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  overflow-y: scroll;
  scrollbar-width: none;
}
.slider-page .panel::-webkit-scrollbar {
  display: none;
}

.slider-page .panel.blank {
  pointer-events: none;
}

// HOME - SHADE TEXT
.text-nav {
  position: absolute;
  top: var(--menu-height);
  width: 100vw;
  height: calc(100vh - var(--menu-height));
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  pointer-events: none;
  z-index: 20;
}

.text-nav .frame {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.text-nav .frame.hide {
  opacity: 0;
  pointer-events: none;
  user-select: none;
}

.text-nav .text {
  margin: 0;
  text-transform: uppercase;
  line-height: 1.2;
  letter-spacing: 0.02em;
  font-size: clamp(40px, 3.8vw, 52px);
  font-weight: 600;
  text-align: justify;
  max-width: 75%;
  transition: opacity 50ms ease;
}

.text-nav .highlight {
  background: none;
  border: none;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 800;
  color: var(--color-hl-0);
  padding: 0;
  cursor: pointer;
  font: inherit;
}

.text-nav .highlight:focus-visible {
  outline: 2px solid var(--color-hl-0);
  outline-offset: 6px;
}

.text-nav .sentence {
  display: inline;
  transition: opacity 50ms ease;

  button {
    pointer-events: auto;
  }
}

body.detail-open .text-nav .sentence {
  opacity: 0;
  pointer-events: none;

  button {
    pointer-events: none;
  }
}

body.detail-open .text-nav .sentence.active {
  opacity: 1;
  position: relative;
  pointer-events: auto;

  background-color: var(--color-hl-0);

  button {
    pointer-events: auto;
    color: var(--color-bg);
  }
}

